revised the header style to HEADER.css

--- a/static/html/store.html
+++ b/static/html/store.html
@@ -6,6 +6,7 @@
     <title>Store</title>
     <link rel="stylesheet" href="/css/store.css">
     <link rel="stylesheet" href="/css/BASE.css">
+    <link rel="stylesheet" href="/css/HEADER.css">
 </head>
 <body>
     <header>
