revised, now is minimal

--- a/static/html/HEADER.html
+++ b/static/html/HEADER.html
@@ -1,28 +1,4 @@
-<!-- <header> -->
-<div class="logo" onclick="window.location.href='/'">
-    <img src="/media/logo/SJDSTUDIOS_transparent.png" alt="logo" height="80px">
-    <h1>Sjdstudios.co</h1>
+<div class="logo" style="display: flex; align-items: center; padding: 10px;">
+    <img src="/media/logo/SJDSTUDIOS_transparent.png" alt="SJDSTUDIOS" style="width: 50px;">
+    <h1>SJDSTUDIOS.co</h1>
 </div>
-<div class="navigation">
-    <ul>
-        <!-- search function -->
-        <li>
-            <form class="search-form" action="">
-                <input type="text" placeholder="Search.." name="search">
-                <button type="submit">SEARCH</i></button>
-            </form>
-        </li>
-
-        <li id="cartBtn"><img src="/media/cart.png" alt="cart" onclick="window.location.href='/cart'"></li>
-        <li id="profileBtn"><img src="/media/profile.png" alt="" onclick="window.location.href='/profile'"></li>
-
-        <!-- dropdown selection -->
-        <li class="dropdownBtn">
-            <select name="dropdownSelect" id="dropdownSelect">
-                <option value="/cart" selected>Cart</option>
-                <option value="/profile">Profile</option>
-            </select>
-        </li>
-    </ul>
-</div>
-<!-- </header> -->
