--- a/static/html/HEADER.html
+++ b/static/html/HEADER.html
@@ -1,4 +1,8 @@
-<div class="logo" style="display: flex; align-items: center; padding: 10px;">
+<div class="logo" style="display: flex; align-items: center; padding: 10px;" onclick="window.location.href = '/store';">
     <img src="/media/logo/SJDSTUDIOS_transparent.png" alt="SJDSTUDIOS" style="width: 50px;">
     <h1>SJDSTUDIOS.co</h1>
+</div>
+<div class="navi" style="display: flex; margin-left: auto; align-items: center;">
+    <a href="/cart"><img src="/media/cart.png" alt="Cart" style="width: 40px;"></a>
+    <a href="/bookings">BOOK</a>
 </div>
