--- a/static/html/bookings.html
+++ b/static/html/bookings.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/bookings.css">
     <link rel="stylesheet" href="../css/BASE.css">
     <link rel="stylesheet" href="../css/HEADER.css">
+    <link rel="stylesheet" href="../css/GRID.css">
 </head>
 <body>
     <header></header>
     <div class="container">
         <div class="content">
-            <div class="details">
+            <div class="grid-container">
+                <!-- grid-item -->
             </div>
         </div>
     </div>
 
-    <script type="module" src="../js/details.js"></script>
+    <script type="module" src="../js/bookings.js"></script>
 </body>
 </html>
