--- a/static/html/cart.html
+++ b/static/html/cart.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/BASE.css">
+    <link rel="stylesheet" href="../css/HEADER.css">
+    <link rel="stylesheet" href="../css/GRID.css">
 </head>
 <body>
-    
+    <header></header>
+    <div class="container">
+        <div class="content-override">
+            <div class="grid-container">
+                <!-- grid-item -->
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="../js/cart.js"></script>
 </body>
 </html>
