--- a/static/html/store.html
+++ b/static/html/store.html
@@ -13,20 +13,7 @@
     <div class="container">
         <div class="content-override">
             <div class="grid-container">
-
-                <div class="grid-item" style="outline: black solid 1px;">
-                    <img src="/media/sjd/4K_Camera_Setup.png" alt="" style="width: 200px;">
-                    <div class="info">
-                        <h4><b id="name">NAME HERE</b></h4>
-                        <p id="price">PRICE HERE</p>
-                        <p id="ref">REF HERE</p>
-                        <div class="buttons">
-                            <button id="add">Add to cart</button>
-                            <button id="info">More info</button>
-                        </div>
-                    </div>
-                </div>
-
+                <!-- grid-item -->
             </div>
         </div>
     </div>
