--- a/static/html/index.html
+++ b/static/html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "/store";
+        window.location.href = "/login";
     </script>
 </body>
 </html>
