fixed some things idk

--- a/static/html/extend-booking.html
+++ b/static/html/extend-booking.html
@@ -52,6 +52,7 @@
                 <div class="buttons">
                     <button type="submit" id="submitButton">Checkout</button>
                     <button type="reset" id="resetButton">Reset</button>
+                    <button type="button" onclick="window.history.back()">Cancel</button>
                 </div>
             </form>
         </div>
