--- a/static/html/book.html
+++ b/static/html/book.html
@@ -113,6 +113,7 @@
                 <div class="buttons">
                     <button type="submit" id="submitButton">Checkout</button>
                     <button type="reset" id="resetButton">Reset</button>
+                    <button type="button" onclick="window.history.back()">Cancel</button>
                 </div>
             </form>
         </div>
