added button design atleast

--- a/static/html/book.html
+++ b/static/html/book.html
@@ -92,7 +92,7 @@
 
                 <!-- payment method -->
                 <div class="payment-dropdown">
-                    <label for="paymentMethod">Payment Method (Required)</label><br>
+                    <label for="paymentMethod">Payment Method</label><br>
                     <select name="paymentMethod" id="paymentMethodDropdown" required>
                         <option value="cod">Cash On Delivery (COD)</option>
                         <option value="gcash">GCash</option>
