--- a/static/html/bookings.html
+++ b/static/html/bookings.html
@@ -12,7 +12,7 @@
 <body>
     <header></header>
     <div class="container">
-        <div class="content">
+        <div class="content-override">
             <div class="grid-container">
                 <!-- grid-item -->
             </div>
